# frameko

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: quickstart.py
src/frameko/: __init__.py  config.py  core.py  errors.py
src/frameko/embed/: openclip.py
src/frameko/index/: base.py  faiss_backend.py  qdrant_backend.py
src/frameko/pipelines/: dedup.py  quality.py  sampling.py
src/frameko/presets/: anime.yaml  default.yaml  lecture.yaml
src/frameko/scenes/: scenedetect_adapter.py
src/frameko/store/: metadata_sqlite.py  schema.sql
src/frameko/video/: extract.py  ffmpeg.py
tests/: test_dedup_hash.py  test_faiss_backend.py  test_ffmpeg_extract_integration.py  test_smoke_import.py
