[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "frameko"
version = "0.1.0"
description = "Notebook frame to image toolkit."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Lumy"}
]
keywords = ["video", "frames", "anime", "clip", "openclip", "faiss", "qdrant", "search"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Multimedia :: Video",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "numpy>=1.24",
  "Pillow>=10",
  "PyYAML>=6",
  "tqdm>=4.66",
  scenedetect[opencv]>=0.6.6,
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "mypy>=1.8"]

[project.urls]
Homepage = "https://github.com/luminolous/frameko"
Repository = "https://github.com/luminolous/frameko"
Issues = "https://github.com/luminolous/frameko/issues"

[tool.hatch.build]
include = [
  "src/frameko/**",
  "README.md",
  "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/frameko"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]